--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-	
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	</head>
 	<body>
 		<h1>GanarDineroRapido.es</h1>
 		<ul>	
-			<li>Descubre el secreto</li>	
-			<li>¿Quién soy?</li>
-			<li>¿Funcionará para mí?</li>
-			<li>Gente que ya se ha hecho millonaria</li>
+			<li><a href="#">Descubre el secreto</a></li>	
+			<li><a href="#">¿Quién soy?</a></li>
+			<li><a href="#">¿Funcionará para mí?</li>
+			<li><a href="#">Gente que ya se ha hecho millonaria</a></li>
 		</ul>
 
 	</body>
